# ORMA

./: .gitignore  CMakeLists.txt  make.rb
3rd/lib/: libcurl_imp.exp  libcurl_imp.lib
applications/: CMakelists.txt  database_builder.cpp  free_money.cpp  market_explorer.cpp  market_fetch.cpp  pinger.cpp
c_api/include/: allocator_c_api.h  buffer_c_api.h  types_c_api.h
c_api/src/: CMakeLists.txt  allocator_c_api.cpp  buffer_c_api.cpp
cmake/: CMakeCompiler.cmake  CMakePlatforms.cmake
data/: asset_database.adb  asset_database.json
sdk/include/orma_rest/: credentials.h  curl_api.h  database.h  market.h  ping_response.h  session.h
sdk/src/: CMakeLists.txt
sdk/src/orma_rest/: curl_api.cpp  database.cpp  session.cpp
